# Ldm

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  BUILD_SUCCESS_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CMakeLists.txt  COMPLETE_FEATURES_STATUS.md  CONTRIBUTING.md  FINAL_SUMMARY.md  INTERFACE_COMPLETE.md  INTERFACE_STATUS.md  README.md  README_COMPLETE.md  RELEASE_SUMMARY.md  SCRIPTS.md  SOLUTION_SUMMARY.md  TEST_REPORT.md  VALIDATION_ADDURL.md  VERSION_1.0.0_SUCCESS.md  VERSION_UPDATE_SUMMARY.md  build.sh  build_cli.sh  build_working.sh  clean.sh  demo-cli.sh  demo-gui.sh  demo.sh  demo_complete.sh  demo_ldm_final.sh  diagnose_ldm.sh  install.sh  install_complete.sh  ldm  ldm-gui  run_ldm_complete.sh  start_ldm.sh  test-deps.sh  test_ldm_interface.sh  (+3 more)
.github/workflows/: build-linux.yml  build-windows.yml  ci.yml  release.yml  test-build.yml
browser-extension/: manifest-firefox.json  manifest-safari.json  manifest.json
browser-extension/background/: background.js
browser-extension/content/: content-script.js
browser-extension/popup/: popup.css  popup.html  popup.js
desktop/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile.complete  Makefile.fixed  Makefile.idm  Makefile.idm_complete  Makefile.simple  Makefile.simple_addurl  Makefile.test_addurl  build_complete.sh  build_simple_gui.sh  build_test.sh  capture_ui.sh  config.h.in  idm_style_demo.cpp  ldm-cli  ldm-complete  ldm-desktop.pro  ldm-idm  ldm-working  ldm_idm_test  moc_predefs.h  quick_ui_test  quick_ui_test.cpp  simple_main.cpp  test_addurl.cpp  test_addurl_simple.cpp  test_addurl_simple.pro  test_filename_extraction  test_filename_extraction.cpp  test_icon.cpp  test_main  test_main.cpp  test_simple  test_ui_simple.cpp  version.h
desktop/desktop/: config.h
desktop/desktop/resources/: resources.qrc.depends
desktop/resources/: create_icons.py  create_logo_variants.py  ldm.desktop  resources.qrc
desktop/resources/styles/: idm_style.qss  ldm-clean-modern.css  ldm-compact-responsive.css  ldm-modern-simple.css  ldm-modern-theme.css  ldm-theme.css
desktop/src/: main.cpp  main_cli_simple.cpp  main_complete.cpp  main_idm.cpp  main_idm_complete.cpp  main_simple.cpp  main_simple_gui.cpp  main_simple_notray.cpp  main_test.cpp  main_working.cpp
desktop/src/api/: ApiServer.cpp  ApiServer.h
desktop/src/cli/: main.cpp
desktop/src/core/: Category.cpp  Category.d  Category.h  Database.cpp  Database.d  Database.h  DownloadEngine.cpp  DownloadEngine.d  DownloadEngine.h  DownloadItem.cpp  DownloadItem.d  DownloadItem.h  DownloadQueue.cpp  DownloadQueue.h  NetworkManager.cpp  NetworkManager.d  NetworkManager.h  Scheduler.cpp  Scheduler.h  SegmentManager.cpp  SegmentManager.d  SegmentManager.h  Settings.cpp  Settings.d  Settings.h  SpeedCalculator.cpp  SpeedCalculator.d  SpeedCalculator.h
desktop/src/integrations/: BrowserIntegration.cpp  BrowserIntegration.h
desktop/src/plugins/: PluginInterface.h
desktop/src/plugins/TorrentPlugin/: TorrentPlugin.cpp  TorrentPlugin.h
desktop/src/plugins/YouTubePlugin/: YouTubePlugin.cpp  YouTubePlugin.h
desktop/src/ui/: AddUrlDialog.cpp  AddUrlDialog.d  AddUrlDialog.h  CategoryManager.cpp  CategoryManager.h  CategorySidebar.cpp  CategorySidebar.h  CustomProgressBar.h  DownloadDetailsPanel.h  DownloadListWidget.cpp  DownloadListWidget.h  DownloadTableWidget.cpp  DownloadTableWidget.h  MainWindow.cpp  MainWindow.h  MediaPreviewWidget.cpp  MediaPreviewWidget.h  ProgressWidget.cpp  ProgressWidget.h  SettingsDialog.cpp  SettingsDialog.h  SpeedChart.h  StatisticsWidget.cpp  StatisticsWidget.h  ThemeManager.cpp  ThemeManager.h
desktop/src/utils/: AutoUpdater.cpp  AutoUpdater.h  Checksum.cpp  Checksum.h  ClamAVScanner.cpp  ClamAVScanner.h  Encryption.cpp  Encryption.h  FormatConverter.cpp  FormatConverter.h  Logger.cpp  Logger.h  MemoryMappedFile.cpp  MemoryMappedFile.h  MetadataCache.cpp  MetadataCache.h
desktop/tests/: CMakeLists.txt  main.cpp
desktop/tests/test-api/: TestApiServer.cpp  TestApiServer.h
desktop/tests/test-core/: TestDownloadItem.cpp  TestDownloadItem.h  TestNetworkManager.cpp  TestNetworkManager.h
desktop/tests/test-performance/: TestPerformance.cpp  TestPerformance.h
desktop/tests/test-ui/: TestBasicDownload.cpp  TestBasicDownload.h
docs/: RELEASE_GUIDE.md  distribution.md
docs/api/: rest-api.md
docs/user-guide/: installation.md
installer/debian/: postinst  prerm
installer/linux/: build-deb.sh
installer/macos/: build-dmg.sh
installer/rpm/: postinstall.sh  preuninstall.sh
installer/windows/: installer.nsi
native-messaging/host/: CMakeLists.txt  MessageParser.cpp  MessageParser.h  NativeHost.cpp  NativeHost.h
native-messaging/host/manifest/: chrome-manifest.json  firefox-manifest.json
scripts/: release.sh
validation_results/: validation_report.md
